--- a/web/themes/colors/style.css
+++ b/web/themes/colors/style.css
@@ -402,7 +402,6 @@ h3 {
 	--color-evu: firebrick;
 	--color-pv: #33a02c;
 	--color-house: #7f7f7f;
-	--color-devices: #f16913;
 	--color-charging: #1f78b4;
 	--color-export: #b2df8a;
 	--color-axis: gray;
@@ -421,7 +420,7 @@ h3 {
 	--color-lp6: #deebf7;
 	--color-lp7: #08519c;
 	--color-lp8: #6baed6;
-		--color-co1: #bf3caf;
+	--color-co1: #bf3caf;
 	--color-co2: #963db3;
 	--padding-widget: 5px;
 	--fontCol: rgba(255, 255, 255, 0.82);
@@ -436,7 +435,6 @@ h3 {
 	--color-evu: firebrick;
 	--color-pv: #33a02c;
 	--color-house: #7f7f7f;
-	--color-devices: #f16913;
 	--color-charging: #1f78b4;
 	--color-export: #b2df8a;
 	--color-axis: steelblue;
@@ -465,7 +463,6 @@ h3 {
 	--color-evu: firebrick;
 	--color-pv: #33a02c;
 	--color-house: #7f7f7f;
-	--color-devices: #f16913;
 	--color-charging: #1f78b4;
 	--color-export: #b2df8a;
 	--color-axis: #666666;
@@ -490,6 +487,7 @@ h3 {
 }
 
 .shcolors-normal {
+	--color-devices: #f16913;
 	--color-sh1: #fd8d3c;
 	--color-sh2: #f16913;
 	--color-sh3: #d94801;
@@ -502,6 +500,7 @@ h3 {
 }
 
 .shcolors-advanced {
+	--color-devices: #ff4d4d;
 	--color-sh1: #ffffff;
 	--color-sh2: #ff4d4d;
 	--color-sh3: #668cff;
@@ -512,6 +511,20 @@ h3 {
 	--color-sh8: #993300;
 	--color-sh9: #a366ff;
 }
+
+.shcolors-standard {
+	--color-devices: rgba(200, 50, 200, 0.7);
+	--color-sh1: rgba(200, 150, 200, 0.7);
+	--color-sh2: rgba(200, 100, 200, 0.7);
+	--color-sh3: rgba(200, 50, 200, 0.7);
+	--color-sh4: rgba(200, 0, 200, 0.7);
+	--color-sh5: rgba(150, 200, 200, 0.7);
+	--color-sh6: rgba(100, 200, 200, 0.7);
+	--color-sh7: rgba(50, 200, 200, 0.7);
+	--color-sh8: rgba(0, 200, 200, 0.7);
+	--color-sh9: rgba(200, 200, 200, 0.7);
+}	
+	
 .openwb-devices {
 	color: #ccffff;
 	background-color: #009696;
@@ -541,4 +554,4 @@ th {
 .axis text {
 	color: var(--color-axis);
 	stroke-width: 0;
-	} 
+} 
