--- a/web/display/colors/style.css
+++ b/web/display/colors/style.css
@@ -461,7 +461,7 @@ h3 {
 
 .wb-widget {
 	background-color: var(--color-bg);
-	border:1px solid var(--color-frame) ;
+	border:1px solid var(--color-bg) ;
 }
 
 .wb-subwidget {
