--- a/web/display/colors/style.css
+++ b/web/display/colors/style.css
@@ -230,11 +230,11 @@ hr {
     animation: alertPulsation 1s infinite;
 }
 .text-green {
-    color: #006515;
+    color: #4db662;
 }
 
 .text-red {
-    color: #A30000;
+    color: #d12020;
 }
 
 .text-white {
