--- a/web/themes/standard/style.css
+++ b/web/themes/standard/style.css
@@ -16,7 +16,7 @@ body {
 	background: white;
 }
 body > .container {
-	padding: 55px 15px 0;
+	padding: 55px 15px 25px;
 }
 
 @keyframes alertPulsation {
