--- a/web/themes/EvenDarker/style.css
+++ b/web/themes/EvenDarker/style.css
@@ -14,7 +14,7 @@ body {
 	color: white;
 }
 body > .container {
-	padding: 55px 15px 0;
+	padding: 55px 15px 25px;
 }
 
 @keyframes alertPulsation {
