minor styling fixes of main pages

--- a/web/themes/Gauges/style.css
+++ b/web/themes/Gauges/style.css
@@ -443,3 +443,27 @@ h3 {
 	--d9Col: rgba(230, 50, 220, 0.7);
 	--d9bgCol: blue;
 }
+
+@media screen and (max-width: 575px) {
+	#date {
+		padding-right: 0;
+		padding-left: 5px;
+	}
+
+	#time {
+		padding-right: 5px;
+		padding-left: 0;
+	}
+}
+
+.progress {
+	background-color: #424242;
+}
+
+.progress-bar {
+	background-color: #424242;
+}
+
+.row.middle {
+	align-items: center;
+}
