Improve Font Sizes

--- a/web/themes/colors/style.css
+++ b/web/themes/colors/style.css
@@ -263,6 +263,9 @@ h4 {
 	line-height: 1.1rem;
 	vertical-align: middle;
 	padding: 0;
+	
+	
+	
 }
 
 @media (min-width: 400px) {
@@ -295,13 +298,16 @@ h4 {
 /* Extra large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) {
 	html {
-		font-size: 18px;
+		font-size: 16px;
 	}
 }
 
-
-
-
+/* Extra extra extra large devices (very large desktops, 2000px and up) */
+@media (min-width: 1700px) {
+  html {
+    font-size: 22px;
+  }
+}
 .maxPrice {
 	text-align: center;
 }
