--- a/web/themes/colors/style.css
+++ b/web/themes/colors/style.css
@@ -268,12 +268,42 @@ h4 {
 
 }
 
+@media (min-width: 240px) {
+	html {
+		font-size: 12px;
+	}
+}
+@media (min-width: 330px) {
+	html {
+		font-size: 14px;
+	}
+}
+
 @media (min-width: 400px) {
 	html {
 		font-size: 15px;
 	}
 }
-
+@media (min-width: 435px) {
+	html {
+		font-size: 16px;
+	}
+}
+@media (min-width: 470px) {
+	html {
+		font-size: 17px;
+	}
+}
+@media (min-width: 505px) {
+	html {
+		font-size: 18px;
+	}
+}
+@media (min-width: 540px) {
+	html {
+		font-size: 19px;
+	}
+}
 /* Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) {
 	html {
